Fixed slider overflow on mobile

--- a/src/components/configurable/SlideInput/styles.scss
+++ b/src/components/configurable/SlideInput/styles.scss
@@ -143,15 +143,22 @@
     margin: 30px;
   }
   .box-minmax {
-    width: 95%;
+    width: 85%;
   }
   .range-slider {
-    width: 90%;
+    width: 80%;
   }
   .rs-range {
-    width: 90%;
+    width: 80%;
+  }
+  .rs-label {
+    margin-left: -30px;
+    width: 80px;
+    height: 80px;
+    padding-top: 2em;
+    font-size: 0.9em;
   }
   .range-lines {
-    width: 89%;
+    width: 79%;
   }
 }
